--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="mx-auto p-10 h-auto">
+  <app-root class="grid grid-col-1 lg:grid-cols-4 gap-12 my-4 lg:my-0 lg:gap-4 justify-around h-auto grid-rows-1"></app-root>
 </body>
 </html>
